[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "cryptography>=44.0.2",
    "flask>=3.1.0",
    "pytelegrambotapi>=4.26.0",
    "requests>=2.32.3",
    "telegram>=0.0.1",
    "user-agent>=0.1.10",
]
